    + [BR] Add check for missing for recommended "get-orig-source"
      target in d/rules for packages that look like they have been
      repacked.  (Closes: #460174)
  * checks/testsuite.pm:
    + [NT] Add "allow-stderr" as known autopkgtest "restriction".
      Thanks to Jérémy Bobbio for the report and the initial
      patch.  (Closes: #721179)
  * checks/version-substvars.desc:
    + [NT] Mention that version-substvar-for-external-package
      can happen if the package name used in the relation has
      a typo.  Thanks to Joachim Reichel for reporting this.
      (Closes: #708576)

  * data/common/source-fields:
    + [NT] Allow the "Dgit" field in source packages.  Thanks
      to Ian Jackson for the report.  (Closes: #721205)
  * data/rules/policy-rules:
    + [BR] New file.
  * data/scripts/{,versioned-}interpreters:
    + [NT] Apply patch from Gunnar Wolf to update which package
      is providing "rackup".  (Closes: #721268)

  * lib/Lintian/Data.pm:
    + [NT] Make a special case to allow "original-maintainer" by
      default in all non-"Debian" profiles.  Thanks to Nick
      Black for the report.  (Closes: #697565)

  * reporting/harness:
    + [NT] Fix bug that caused harness to not remove old log
      entries on incremental runs.
  * reporting/html_reports:
    + [NT] Copy (rather than symlink) the lintian.log to the
      generated website.

  * testset/debug/debian/control:
    + [NT] Mark some packages "arch:any" to avoid test failures
      on kfreebsd-amd64.  (Closes: #688524)

  * vendors/ubuntu/main/data/{common,fields}/*:
    + [NT] Retire now redundant files.

 -- Niels Thykier <niels@thykier.net>  Mon, 26 Aug 2013 08:19:50 +0200

lintian (2.5.17) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - apache2-unparsable-dependency
      - deprecated-configure-filename
      - doc-base-abstract-field-separator-extra-whitespace
      - doc-base-abstract-might-contain-extra-leading-whitespace