@@ -25,11 +25,13 @@ lintian (2.5.18) UNRELEASED; urgency=low
     + [NT] Add "allow-stderr" as known autopkgtest "restriction".
       Thanks to Jérémy Bobbio for the report and the initial
       patch.  (Closes: #721179)
-  * checks/version-substvars.desc:
+  * checks/version-substvars{.desc,.pm}:
     + [NT] Mention that version-substvar-for-external-package
       can happen if the package name used in the relation has
       a typo.  Thanks to Joachim Reichel for reporting this.
       (Closes: #708576)
+    + [NT] Ignore ":any" qualifiers in dependencies.  Thanks to
+      Scott Ritchie for the report.  (Closes: #658320)
 
   * data/common/source-fields:
     + [NT] Allow the "Dgit" field in source packages.  Thanks
